# gl-mcp

./: .gitignore  .markdownlint.json  README.md
src/devices/: CHANGELOG.md  Makefile  README.md  __main__.py  _version.py  pyproject.toml  server.json
src/devices/auth/: oauth2_provider.py  token_manager.py
src/devices/config/: __init__.py  logging.py  settings.py
src/devices/examples/: mcp.json.example
src/devices/greenlake_devices_mcp/: __init__.py  __main__.py  _version.py
src/devices/greenlake_devices_mcp/auth/: __init__.py  oauth2_provider.py  token_manager.py
src/devices/greenlake_devices_mcp/config/: logging.py  settings.py
src/devices/greenlake_devices_mcp/models/: __init__.py  base.py
src/devices/greenlake_devices_mcp/server/: __init__.py  app.py  fastmcp_instance.py  mcp_server.py
src/devices/greenlake_devices_mcp/tools/: __init__.py  base.py  registry.py
src/devices/greenlake_devices_mcp/utils/: http_client.py
src/devices/models/: __init__.py  base.py
src/devices/server/: __init__.py  app.py  mcp_server.py
src/devices/tests/: __init__.py  conftest.py  test_auth_template.py  test_config_template.py  test_dynamic_tools_template.py  test_models_template.py  test_server_template.py  test_utils_template.py  test_version_template.py
src/devices/tests/e2e/: test_e2e.py
src/devices/tests/integration/: __init__.py  test_live_tools.py
src/devices/tests/shared/: __init__.py  http.py
src/devices/tests/unit/: __init__.py  test_getdevicebyidv1_tool.py  test_getdevicesv1_tool.py  test_models.py  test_server.py  test_tools.py
src/devices/tools/: __init__.py  base.py  registry.py
src/devices/tools/implementations/: __init__.py  get_endpoint_schema.py  getdevicebyidv1.py  getdevicesv1.py  invoke_dynamic_tool.py  list_endpoints.py
src/devices/utils/: __init__.py  http_client.py
src/service-catalog/: CHANGELOG.md  Makefile  README.md  pyproject.toml  server.json
src/service-catalog/examples/: mcp.json.example
src/service-catalog/greenlake_service_catalog_mcp/: __init__.py  __main__.py  _version.py
src/service-catalog/greenlake_service_catalog_mcp/auth/: __init__.py  oauth2_provider.py  token_manager.py
src/service-catalog/greenlake_service_catalog_mcp/config/: __init__.py  logging.py  settings.py
src/service-catalog/greenlake_service_catalog_mcp/models/: __init__.py  base.py
src/service-catalog/greenlake_service_catalog_mcp/server/: __init__.py  app.py  fastmcp_instance.py  mcp_server.py
src/service-catalog/greenlake_service_catalog_mcp/tools/: __init__.py  base.py  registry.py
src/service-catalog/greenlake_service_catalog_mcp/utils/: __init__.py  http_client.py
src/service-catalog/tests/: __init__.py  conftest.py  test_auth_template.py  test_config_template.py  test_dynamic_tools_template.py  test_models_template.py  test_server_template.py  test_utils_template.py  test_version_template.py
src/service-catalog/tests/e2e/: test_e2e.py
src/service-catalog/tests/integration/: __init__.py  test_live_tools.py
src/service-catalog/tests/shared/: __init__.py  http.py
src/service-catalog/tests/unit/: __init__.py  test_get_service_manager_provision_v1_tool.py  test_get_service_manager_provisions_v1_tool.py  test_get_service_manager_v1_tool.py  test_get_service_managers_v1_tool.py  test_getserviceoffer_tool.py  test_getserviceofferregion_tool.py  test_getserviceofferregions_tool.py  test_getserviceoffers_tool.py  test_getserviceprovision_tool.py  test_getserviceprovisions_tool.py  test_models.py  test_per_region_service_managers_v1_tool.py  test_server.py  test_service_managers_for_a_region_v1_tool.py  test_tools.py
(+475 files in other folders)
