[project]
name = "greenlake-service-catalog-mcp"
version = "1.0.0"
description = "HPE GreenLake service-catalog MCP Server"
authors = [
    {name = "HPE GreenLake Platform Team", email = "greenlake-platform@hpe.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.23.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "black>=25.9.0",
    "isort>=7.0.0",
    "mypy>=1.18.0",
    "ruff>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/HewlettPackard/gl-mcp"
Repository = "https://github.com/HewlettPackard/gl-mcp"
Documentation = "https://github.com/HewlettPackard/gl-mcp/tree/main/src/service-catalog"
"Bug Tracker" = "https://github.com/HewlettPackard/gl-mcp/issues"

[project.scripts]
greenlake-service-catalog-mcp = "greenlake_service_catalog_mcp.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["greenlake_service_catalog_mcp"]
exclude = [
    "tests/",
    "**/__pycache__/",
    "**/*.pyc",
    ".gitignore",
    "Makefile",
    "uv.lock",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: mark tests that call real external services",
]

[tool.ruff]
line-length = 120
target-version = "py310"
